--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
+@import "./header.css";
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.wrapper{
+    max-width: 1440px;
+    width: 100%;
+    margin: 0 auto;
 }
