--- a/css/header.css
+++ b/css/header.css
@@ -43,6 +43,7 @@
     font-size: 10px;
     font-weight: 400;
     text-align: center;
+    text-decoration: none;
 }
 
 .header-menu-list__burger {
