--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "./header.css";
+@import "./popular-section.css";
 
 *{
     margin: 0;
@@ -10,4 +11,10 @@
     max-width: 1440px;
     width: 100%;
     margin: 0 auto;
+}
+
+.container{
+    max-width: 1368px;
+    width: 100%;
+    margin: 0 72px;
 }
