Добавлена карточки товаров в секции - Лучшие предложения

--- a/css/best-offer-section.css
+++ b/css/best-offer-section.css
@@ -1,5 +1,5 @@
 .best-offer-section {
-    background-color: aqua;
+    /* background-color: aqua; */
     padding: 136px 130px 130px 88px;
 
 }
@@ -25,8 +25,9 @@
 }
 
 .best-offer-section-products-cards {
-    background-color: blue;
     padding-top: 24px;
+    display: flex;
+    gap: 35px;
 }
 
 .best-offer-section-card {
@@ -37,7 +38,11 @@
     min-height: 536px;
     height: 100%;
     padding: 16px 16px 40px 16px;
-    background-color: tomato;
+    background: none;
+}
+.best-offer-section-card:hover{
+    cursor: pointer;
+    background: rgba(227, 246, 245, 0.3);
 }
 
 .best-offer-section-card__img {
@@ -51,15 +56,15 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
 }
 
 .best-offer-section-card__img_up {
     display: flex;
     align-items: center;
-    gap: 39px;
+    gap: 38px;
     padding: 14px 16px 0 16px;
+    justify-content: flex-end;
 }
 
 .best-offer-section-card-sale {
@@ -85,7 +90,6 @@
     cursor: pointer;
     background-repeat: no-repeat;
     background-position: center;
-
 }
 
 .best-offer-section-card__color_grey {
@@ -116,10 +120,27 @@
     font-weight: 400;
     text-align: left;
     padding-top: 24px;
+    max-width: 207px;
+    width: 100%;
+    max-height: 63px;
+    min-height: 63px;
+    height: 100%;
 }
 
 .best-offer-section-card__img-one {
     background-image: url('/img/png/shutter_green.png');
+}
+
+.best-offer-section-card__img-two{
+    background-image: url('/img/png/shutter_gold.png');
+}
+
+.best-offer-section-card__img-three {
+    background-image: url('/img/png/shutter_grey.png');
+}
+
+.best-offer-section-card__img-four{
+    background-image: url('/img/png/shutter_white.png');
 }
 
 .best-offer-section-card-price {
