--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import "./popular-section.css";
 @import "./best-offer-products-cards-section.css";
 @import "./best-offer-fieldset-section.css";
+@import "./footer.css";
+
 *{
     margin: 0;
     padding: 0;
