--- a/css/best-offer-fieldset-section.css
+++ b/css/best-offer-fieldset-section.css
@@ -10,9 +10,7 @@
     border: 1px solid rgb(65, 122, 130);
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 56px 0 51px 0;
-
 }
 
 .best-offer-fieldset-legend {
@@ -22,6 +20,7 @@
     font-weight: 400;
     text-align: center;
     text-transform: uppercase;
+    padding: 0 28px;
 }
 
 .best-offer-fieldset-title {
@@ -68,7 +67,6 @@
 
 .best-offer-fieldset-checkbox {
     display: flex;
-    align-items: center;
     justify-content: center;
     padding-top: 50px;
     gap: 102px;
@@ -80,16 +78,11 @@
     gap: 20px;
     max-width: 315px;
     width: 100%;
-}
-
-.best-offer-fieldset-checkbox-item {
-    display: flex;
-    gap: 16px;
-    align-items: center;
+    
 }
 
 .best-offer-fieldset-checkbox__ch[type="checkbox"] {
-    opacity: 0;
+    display: none;
 }
 
 .best-offer-fieldset-checkbox__label {
@@ -97,12 +90,17 @@
     font-family: "PT Sans";
     font-size: 16px;
     font-weight: 400;
-
+    position: relative;
 }
 
-.best-offer-fieldset-checkbox__span::before {
-    display: inline-block;
+.best-offer-fieldset-checkbox__label::before,
+.best-offer-fieldset-checkbox__label::after{
+    position: absolute;
     content: "";
+}
+
+.best-offer-fieldset-checkbox__label::before{
+    display: inline-block;
     max-width: 16px;
     min-width: 16px;
     width: 100%;
@@ -112,39 +110,31 @@
     cursor: pointer;
     background-color: #FFFFFF;
     border: 2px solid rgb(65, 122, 130);
-    position: relative;
-
+    left: -34px;
+    top: 0px;
 }
 
-.best-offer-fieldset-checkbox__span::after {
-    position: absolute;
-    content: "";
+.best-offer-fieldset-checkbox__label::after {
     display: inline-block;
-    height: 3px;
-    width: 6px;
+    height: 6px;
+    width: 9px;
     border-left: 2px solid rgb(65, 122, 130);
     border-bottom: 2px solid rgb(65, 122, 130);
     transform: rotate(-45deg);
-    left: 2px;
-    top: 2px;
+    left: -29px;
+    top: 3px;
 }
 
-.best-offer-fieldset-checkbox__ch[type="checkbox"]+.best-offer-fieldset-checkbox__span::after {
+.best-offer-fieldset-checkbox__ch + .best-offer-fieldset-checkbox__label::after{
     content: none;
-    /* content: ""; */
 }
 
-.best-offer-fieldset-checkbox__span[type="checkbox"]:checked+.best-offer-fieldset-checkbox__span::after {
-    /* content: none; */
+.best-offer-fieldset-checkbox__ch:checked + .best-offer-fieldset-checkbox__label::after{
     content: "";
 }
-
-/* .best-offer-fieldset-checkbox__span input[type="checkbox"]:checked:after {
-    content: "";
-} */
 
 .best-offer-fieldset-next__btn {
-    margin-top: 42px;
+    margin: 42px auto 0 auto;
     padding: 8px 24px;
     background: rgb(255, 255, 255);
     color: rgb(5, 46, 76);
@@ -155,4 +145,6 @@
     text-transform: uppercase;
     border: 1px solid rgb(5, 46, 76);
     cursor: pointer;
+    max-width: 87px;
+    width: 100%;
 }
