Добавлено всплывающее меню

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import "./header.css";
+@import "./menu-section.css";
 @import "./popular-section.css";
 @import "./best-offer-products-cards-section.css";
 @import "./best-offer-fieldset-section.css";
